--- a/css/style.css
+++ b/css/style.css
@@ -78,3 +78,7 @@ button:hover {
 .button-group button {
     margin: 0;
 }
+a, a:visited {
+    color: whitesmoke;
+    text-decoration-color: whitesmoke;
+  }
